# audio_service_smtc

./: README.md  pubspec.yaml
.github/: cspell.json
example/: pubspec.yaml
example/lib/: main.dart
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
lib/: audio_service_smtc.dart  smtc_windows.dart
lib/src/: audio_handler_callbacks.dart  audio_service_platform.dart  audio_service_smtc.dart  metadata.dart  smtc_plugin.dart
test/: widget_test.dart
test/src/: audio_service_smtc_test.dart
windows/: CMakeLists.txt  audio_service_smtc_plugin.cpp  audio_service_smtc_plugin.h  audio_service_smtc_plugin_c_api.cpp
windows/include/audio_service_smtc/: audio_service_smtc_plugin_c_api.h
windows/smtc_windows/: audio_service_smtc_plugin.cpp  audio_service_smtc_plugin.h  smtc_windows.cpp  smtc_windows.h
